--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="result_will_appear_here">Result will appear here.</string>
+    <string name="type_something">Type something...</string>
 
     <string-array name="country1_arrays">
         <item>English</item>
